system/connect/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connect
  namespace: connect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - onepassword.lajas.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: onepassword-connect
      port: 8080
